# zeroclaw-plugins

./: .gitignore  README.md  registry.json
.github/workflows/: publish.yml  validate.yml
docs/: ci.md  proof-doc-only.md
incubating/: README.md
incubating/mastodon-post/: manifest.toml
incubating/mastodon-post/src/: lib.rs
incubating/wikipedia-summary/src/: lib.rs
plugins/amqp/: Cargo.toml  README.md  manifest.toml
plugins/amqp/src/: amqp.rs  lib.rs
plugins/amqp/tests/: amqp.rs
plugins/bluesky/: Cargo.toml  README.md  manifest.toml
plugins/bluesky/src/: bluesky.rs  lib.rs
plugins/bluesky/tests/: bluesky.rs
plugins/dingtalk/src/: lib.rs
plugins/discord/: README.md  manifest.toml
plugins/discord/src/: lib.rs
plugins/email/src/: lib.rs
plugins/gitea/: Cargo.toml  README.md  manifest.toml
plugins/gitea/src/: lib.rs
plugins/gmail_push/: Cargo.toml  README.md  manifest.toml
plugins/gmail_push/src/: gmail_push.rs  lib.rs
plugins/irc/: Cargo.toml  README.md  manifest.toml
plugins/irc/src/: irc.rs  lib.rs
plugins/irc/tests/: irc.rs
plugins/lark/: README.md  manifest.toml
plugins/lark/src/: lark.rs  lib.rs
plugins/line/: manifest.toml
plugins/line/src/: lib.rs
plugins/linq/: README.md  manifest.toml
plugins/linq/src/: lib.rs  linq.rs
plugins/matrix/: Cargo.toml  README.md  manifest.toml
plugins/matrix/src/: lib.rs  matrix.rs
plugins/matrix/tests/: matrix.rs
plugins/mattermost/: Cargo.toml  README.md  manifest.toml
plugins/mattermost/src/: lib.rs  mattermost.rs
plugins/mattermost/tests/: mattermost.rs
plugins/mochat/: Cargo.toml  README.md  manifest.toml
plugins/mochat/src/: lib.rs  mochat.rs
plugins/mochat/tests/: mochat.rs
plugins/mqtt/: Cargo.toml  README.md  manifest.toml
plugins/mqtt/src/: lib.rs  mqtt.rs
plugins/mqtt/tests/: mqtt.rs
plugins/nextcloud/: README.md  manifest.toml
plugins/nextcloud/src/: lib.rs  nextcloud.rs
plugins/nostr/: Cargo.toml  README.md  manifest.toml
plugins/nostr/src/: lib.rs  nostr.rs
plugins/nostr/tests/: nostr.rs
plugins/notion/: Cargo.toml  README.md  manifest.toml
plugins/notion/src/: lib.rs  notion.rs
plugins/notion/tests/: notion.rs
plugins/qq/: Cargo.toml  README.md  manifest.toml
plugins/qq/src/: lib.rs  qq.rs
plugins/qq/tests/: qq.rs
plugins/redact-text/: Cargo.toml  README.md  manifest.toml
plugins/redact-text/src/: lib.rs
plugins/redact-text/tests/: redact.rs
plugins/reddit/: Cargo.toml  README.md  manifest.toml
plugins/reddit/src/: lib.rs  reddit.rs
plugins/reddit/tests/: reddit.rs
plugins/slack/: README.md  manifest.toml
plugins/slack/src/: lib.rs  slack.rs
plugins/telegram/: Cargo.toml  README.md  manifest.toml
plugins/telegram/src/: lib.rs  telegram.rs
plugins/telegram/tests/: telegram.rs
plugins/twitch/: README.md  manifest.toml
plugins/twitch/src/: lib.rs
plugins/twitter/: Cargo.toml  README.md  manifest.toml
plugins/twitter/src/: lib.rs  twitter.rs
plugins/twitter/tests/: twitter.rs
plugins/wati/: manifest.toml
plugins/wati/src/: lib.rs  wati.rs
plugins/webhook/: Cargo.toml  README.md  manifest.toml
plugins/webhook/src/: lib.rs  webhook.rs
plugins/wechat/: Cargo.toml  README.md  manifest.toml
plugins/wechat/src/: lib.rs  wechat.rs
plugins/wechat/tests/: wechat.rs
plugins/wecom/: Cargo.toml  README.md  manifest.toml
plugins/wecom-ws/: Cargo.toml  README.md  manifest.toml
plugins/wecom-ws/src/: lib.rs  wecom_ws.rs
plugins/wecom-ws/tests/: wecom_ws.rs
plugins/wecom/src/: lib.rs  wecom.rs
plugins/wecom/tests/: wecom.rs
plugins/whatsapp/: manifest.toml
plugins/whatsapp/src/: lib.rs  whatsapp.rs
tools/: build-registry.py  registry_contract.py
tools/ci/: plan_matrix.py  run-packager-python.sh  summary.py  validate_components.sh
tools/ci/tests/: test_ci_tools.py
tools/tests/: test_build_registry.py
wit/: UPSTREAM_REF
wit/v0/: channel.wit  sockets.wit  tool.wit
