# Standalone crate (own [workspace]): built for wasm32-wasip2 as a channel
# plugin component; the pure IRC state machine is host-tested with cargo test.
[package]
name = "irc"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "IRC channel plugin for ZeroClaw: TLS, registration, SASL, and text chat."
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen = "0.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

# Standalone crate: built for wasm32-wasip2, not part of the host workspace.
[workspace]
