# Standalone crate (own [workspace]): built for wasm32-wasip2 as a channel
# plugin component; the pure MQTT protocol core (rlib) is host-tested with
# plain cargo test. Raw TCP/TLS is supplied by the host socket capability.
[package]
name = "mqtt"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "MQTT 3.1.1 channel plugin for ZeroClaw over host-mediated TCP/TLS."
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen = "0.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

# Standalone crate: built for wasm32-wasip2, not part of the host workspace.
[workspace]
