# Standalone crate (own [workspace]): built for wasm32-wasip2 as a channel
# plugin component; the pure `notion` core (rlib) is host-tested with plain
# `cargo test`. `waki` (the blocking wasi:http client) is a wasm-only dep so the
# host test build never tries to compile it.
[package]
name = "notion"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Notion task-queue channel plugin for ZeroClaw: poll a database for pending tasks and write results back over wasi:http."
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen = "0.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# wasi:http client — only compiled for the wasm component, never on the host.
[target.'cfg(target_family = "wasm")'.dependencies]
waki = { version = "0.5.1", features = ["json"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

# Standalone crate: built for wasm32-wasip2, not part of the host workspace.
[workspace]
