[package]
name = "redact-text"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "ZeroClaw WIT plugin: redact secrets and PII from text. Config-driven; the canonical reference tool plugin."
publish = false

# cdylib for the wasm component; rlib so the pure redaction core is testable
# on the host with a plain `cargo test`.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen = "0.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

# Standalone crate: built for wasm32-wasip2, not part of the host workspace.
[workspace]
