# Standalone crate (own [workspace]): the pure protocol module is host-tested,
# while the component uses the host-mediated ws-client import on wasm32-wasip2.
[package]
name = "wecom-ws"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "WeCom AI Bot WebSocket channel plugin for ZeroClaw with nonblocking host-mediated text transport."
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen = "0.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = "0.3"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

# Standalone crate: built for wasm32-wasip2, not part of the host workspace.
[workspace]
